added information for run jar